# DL-PROJECT

./: .dockerignore  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  PROJECT_HEALTH_REPORT.md  QUICK_START.md  README.md  RUN_WEB_APP.md  app.py  check_project.py  dataset.py  docker-compose.yml  model.py  project_status.py  project_structure.txt  pyproject.toml  requirements.txt  run_webapp.py  setup.cfg  start_server.ps1  test_dataset.py  test_model.py  train.py  visualize.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: README.md  ci-cd.yml  docker-build.yml  docker-multiplatform.yml  tests.yml
configs/: config.yaml
docs/: MODEL2_IMPLEMENTATION_SUMMARY.md  MODEL2_README.md  QUICKSTART.md  README.md  README_UI.md  UI_ENHANCEMENT_GUIDE.md  UI_FEATURES_SUMMARY.md  UI_MODIFICATION_SUMMARY.md  UI_QUICKSTART.md  VERIFICATION_REPORT.md
docs/ci-cd/: ARCHITECTURE.md  BADGE_SETUP.md  CHECKLIST.md  GUIDE.md  QUICK_REFERENCE.md  README.md
docs/project/: DESCRIPTION.md  PROJECT_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START.md  VERIFICATION_TEST.md
scripts/: check_ci.py  docker_helper.ps1  docker_helper.sh  download_dataset.py  restructure.ps1  start_server.bat
src/evaluation/: compare_models.py  visualize.py
src/models/: model2.py
src/training/: train_model1.py  train_model2.py
templates/: index_new.html
tests/: test_dataset.py  test_model.py  verify_project.py
webapp/: app.py  app_launcher.py
webapp/static/: style.css
webapp/templates/: index.html  index_enhanced.html
